# serenity-shuttle-bot-example

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/commands/: hello.rs  help.rs  mod.rs
